# RTomatoesParse

./: ModelGRU.py  data_parser.py  examples_reference.py  main.py  preprocessdata.py  rotten_tomatoes2000s.py
WebMovieCollector/: CMakeLists.txt  Dockerfile  Requester.cpp  Requester.h  main.cpp  requirments.md
exctenders/: movieextender.py
preproccesor_examples/: __init__.py  keras_text_vectorizer.py  sbert_vectorizer.py  word2vector_vectorizer.py
preproccesors/: __init__.py  text_preprocessorI.py  text_sbertvectorizer.py  text_word2Vec.py
util/: __init__.py  csvfilehelper.py
